# n2dpy

./: .gitignore  AGENTS.md  GUI.md  PACKAGING_WIN.md  README.md  agents_gui.md  codex-maintenance.sh  codex-setup.sh  pyproject.toml  pysidedeploy.json  requirements.txt
.github/workflows/: windows-build.yml
assets/icons/: PLACEHOLDER.txt
n2d_gui/: __init__.py  gui.md
normal2disp/: __init__.py
normal2disp/gui/: entrypoint.py  requirements.txt
normal2disp/gui/n2d_gui/: __init__.py  app.py  backend.py  image_provider.py  jobs.py  models.py  subdivision.py  viewport.py
normal2disp/gui/qml/: LeftPanel.qml  MainWindow.qml  RightPane.qml  StatusBar.qml  Theme.qml  Viewport.qml
normal2disp/n2d/: __init__.py  bake.py  cli.py  core.py  image_utils.py  inspect.py  mesh_utils.py  uv_raster.py
packaging/windows/: build.ps1  installer.iss
testdata/: Informant_Total.fbx
tests/: helpers.py  test_bake.py  test_inspect.py  test_subdivision.py
