[project]
name = "normal2disp"
version = "0.1.0"
description = "Convert tangent-space normal maps to scalar displacement via Poisson integration."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Erica", email = "example@example.com" }]
dependencies = [] # We install runtime deps via requirements.txt in this workflow.

[project.scripts]
n2d = "n2d.cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
